--- a/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/update-lco-commission/update-lco-commission.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/LCO-Commission/update-lco-commission/update-lco-commission.component.html
@@ -126,6 +126,16 @@
                         {{disProductrate}}
                     </div>
                 </div>
+                <div class=" display align-items-center mb-3 w-100">
+                    <div class="col-12 col-md-6">
+                        <label class="label-text "
+                            style="font-weight: 500;margin-bottom: 5px;display: block; font-size: 16px;color: #243359;">
+                           LCO Commission </label>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        {{disCommissionvalue}}
+                    </div>
+                </div>
 
             </div>
             <div class="input_box display align-items-center mb-3 ">
