--- a/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/operator/lcodashboard/lcodashboard.component.html
@@ -1,5 +1,5 @@
 <div id="Customer-page">
-    <section class="mb-3">
+    <section class="mb-3" style="max-height: 775px;overflow: scroll;">
         <div style="margin: 0px;position: sticky">
             <h3 style="text-align: center;padding: 10px;">
                 LCO Dashboard
