--- a/src/app/admin/features/channel_setting/category/category.component.html
+++ b/src/app/admin/features/channel_setting/category/category.component.html
@@ -9,11 +9,11 @@
                             <span>+</span> New
                         </a>
                         <button class="btn btn-outline-info mx-1  bttn" mat-raised-button color="primary" type="button"
-                            [disabled]="!isAnyRowSelected" (click)="Active()">
+                            [disabled]="!isAnyRowSelected" (click)="Active(this.selectedIds)">
                             Active
                         </button>
                         <button class="btn btn-outline-info mx-1  bttn" mat-raised-button color="accent" type="button"
-                            [disabled]="!isAnyRowSelected" (click)="Deactive()">
+                            [disabled]="!isAnyRowSelected" (click)="Deactive(this.selectedIds)">
                             Deactive
                         </button>
                     </div>
