--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.html
@@ -1,4 +1,4 @@
-<div id="Customer-page">
+<div id="Customer-page" style="max-height: 775px;overflow: scroll;">
     <section class="mb-3">
         <div style="margin: 0px;position: sticky">
             <h5 style="text-align: start;padding: 10px;">
@@ -503,7 +503,7 @@
             <mat-accordion class="example-headers-align">
                 <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle>
                     <mat-expansion-panel-header>
-                        <mat-panel-title class="text2"> Manage Package</mat-panel-title>
+                        <mat-panel-title class="text3"> Manage Package</mat-panel-title>
                     </mat-expansion-panel-header>
 
                     <div class="col-12 col-md-12 col-md-8 mx-2">
