--- a/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
+++ b/src/app/admin/features/subscriber/sub-dashboard/sub-dashboard.component.scss
@@ -38,6 +38,12 @@ label {
   color: #000957;
   // font-weight: 700;
 }
+.text3 {
+  padding: 0.5rem;
+  font-size: 19px;
+  color: #000957;
+  // font-weight: 700;
+}
 .bttn{
   /* border: 1px solid #ccc; */
   border-radius: 5px;
