--- a/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
+++ b/src/app/admin/features/cas_operaion/finger-print/finger-print.component.html
@@ -12,10 +12,21 @@
                                 <label for="">CAS</label>
                             </div>
                             <div class="col-12 col-md-8">
-                                <input type="text" placeholder="Search an CAS" formControlName="castypedisplay"
+                                <!-- <input type="text" placeholder="Search an CAS" formControlName="castypedisplay"
                                     (input)="onSearchChange($event)" [(ngModel)]="castype_1" [value]="casname"
-                                    [matAutocomplete]="auto" class="example-input">
-
+                                    [matAutocomplete]="auto" class="example-input"> -->
+                                    <div class="input-container">
+                                        <input
+                                          type="text"
+                                          placeholder="Search a CAS"
+                                          formControlName="castype"
+                                          [value]="casname"
+                                          (input)="onSearchChange($event)"
+                                          [matAutocomplete]="auto"
+                                          class="example-input"
+                                        />
+                                        <i class="bx bx-chevron-down icon-right"></i>
+                                      </div>
                                 <mat-autocomplete #auto="matAutocomplete">
                                     <mat-option *ngFor="let casItem of filteredcas()" [value]="casItem.name"
                                         (click)="onSelectionFingerPrint(casItem)">
