--- a/src/app/admin/features/cas_operaion/mail/mail.component.html
+++ b/src/app/admin/features/cas_operaion/mail/mail.component.html
@@ -15,9 +15,21 @@
                                             <label for="">CAS</label>
                                         </div>
                                         <div class="col-12 col-md-8">
-                                            <input type="text" placeholder="Search an CAS" formControlName="castype"
+                                            <!-- <input type="text" placeholder="Search an CAS" formControlName="castype"
                                                 [(ngModel)]="casname" (input)="onSearchChange($event)"
-                                                [matAutocomplete]="auto" class="example-input">
+                                                [matAutocomplete]="auto" class="example-input"> -->
+                                                <div class="input-container">
+                                                    <input
+                                                      type="text"
+                                                      placeholder="Search a CAS"
+                                                      formControlName="castype"
+                                                      [value]="casname"
+                                                      (input)="onSearchChange($event)"
+                                                      [matAutocomplete]="auto"
+                                                      class="example-input"
+                                                    />
+                                                    <i class="bx bx-chevron-down icon-right"></i>
+                                                  </div>
 
                                             <mat-autocomplete #auto="matAutocomplete">
                                                 <mat-option *ngFor="let casItem of filteredcas()" [value]="casItem.name"
