--- a/src/app/admin/features/channel_setting/_Dialogue/package Creation/package-edit/package-edit.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/package Creation/package-edit/package-edit.component.html
@@ -47,7 +47,7 @@
                 <span>Commission</span>
             </div>
             <div class="col-12 col-md-6">
-                <input type="number" id="commission" class="" maxlength="10" (input)="onKeydown1($event)"
+                <input type="number" id="commission" class="" min="0" (keydown)="preventnegativeInput($event)" maxlength="10" (input)="onKeydown1($event)"
                     [value]="commission" [(ngModel)]="commission" [attr.max]="ispercentage ? 100 : package_rate">
             </div>
         </div>
