--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -11,10 +11,20 @@
                     <span for="">Date</span>
                 </div>
                 <div class="col-12 col-md-8">
-                    <mat-form-field appearance="outline" style="width: 100%;">
+                    <!-- <mat-form-field appearance="outline" style="width: 100%;">
                         <mat-date-range-input [rangePicker]="picker" >
                             <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate" (dateChange)="getFromDate($event)">
                             <input matEndDate matInput placeholder="End date" [(ngModel)]="todate" (dateChange)="getToDate($event)">
+                        </mat-date-range-input>
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-date-range-picker #picker></mat-date-range-picker>
+                    </mat-form-field> -->
+
+                    <mat-form-field appearance="outline">
+                        <mat-date-range-input [rangePicker]="picker" >
+                            <input matStartDate matInput placeholder="Start date" [value]="fromdate"
+                                (dateChange)="getFromDate($event)">
+                            <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)" [value]="todate" >
                         </mat-date-range-input>
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-date-range-picker #picker></mat-date-range-picker>
